<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Settings</string>
    <string name="refresh_action" translatable="false">Refresh</string>
    <string name="show_on_map_action" translatable="false">Show On Map</string>

    <string name="title_activity_detail">DetailActivity</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_temperature_units_label">Temperature Units</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_temperature_units_key" translatable="false">temperatureUnits</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_temperature_units_default" translatable="false">Metric</string>
    <string name="pref_temperature_units_imperial" translatable="false">Imperial</string>

    <string-array name="temperature_units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="temperature_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

</resources>
